# backtest-ape

./: .gitignore  .prettierignore  .solhint.json  LICENSE  README.md  ape-config.yaml  package.json  pyproject.toml  requirements-dev.txt
.github/workflows/: lint.yaml  publish.yaml  test.yaml
backtest_ape/: __about__.py  __init__.py  base.py  setup.py  utils.py
backtest_ape/curve/v2/: __init__.py  base.py  lp.py  setup.py
backtest_ape/gearbox/v2/: __init__.py  base.py  setup.py  steth.py
backtest_ape/uniswap/v3/: __init__.py  base.py  lp.py  setup.py  utils.py
contracts/: Backtest.sol  Setter.sol
contracts/curve/v2/: CurveTricryptoLPBacktest.sol  CurveV2LPBacktest.sol
contracts/mocks/: MockBacktest.sol  MockBacktestRevert.sol  MockContract.sol  MockERC20.sol  MockSetter.sol
contracts/tokens/: WETH9.sol
notebook/: curvev2_lp.ipynb  gearboxv2_steth.ipynb
scripts/: backtester.py
scripts/results/: CurveV2LPRunner-1672083837.csv  CurveV2LPRunner-1672085117.csv  CurveV2LPRunner-1672115772.csv  CurveV2LPRunner_backtest_16048833_-1_300.csv  CurveV2LPRunner_backtest_16048833_16273534_300.csv  CurveV2LPRunner_backtest_16219691_-1_1.csv  CurveV2LPRunner_backtest_16219691_16230691_300.csv  CurveV2LPRunner_backtest_16219691_16435691_2400.csv  CurveV2LPRunner_replay_16048833_16273534_1.csv  GearboxV2STETHRunner_backtest_14805946_15078047_300.csv  GearboxV2STETHRunner_backtest_14805946_15453797_300.csv  UniswapV3LPTotal0Runner_backtest_16219692_17992553_2400.csv  UniswapV3LPTotal1Runner_backtest_16219692_17992553_2400.csv  UniswapV3LPTotalRunner_backtest_16219692_16319692_300.csv
tests/: conftest.py  test_backtest.py  test_setter.py  test_strategy.py
tests/backtest_ape/: test_base.py  test_setup.py
tests/contracts/: conftest.py  test_backtest.py
tests/helpers/mocks/: MockBacktest.sol
(+57 files in other folders)
